v28 2017-07-24

	* You can place expectations on types multiply inheriting several
	  mock types.

	* Changed directory structure. "trompeloeil.hpp" now resides in
	  directory "include". Self test programs "compiling_tests.cpp"
	  and "thread_terror.cpp" resides in directory "test".

	* Major work on CMake support
	  - "make install" - works as before and also includes a package
	  - For CMake based project you can use
	    . "find_package(trompeloeil 28 REQUIRED)" and add
	      "target_link_libraries(<test_program> trompeloeil)" for your test
	      target
	    . use "add_subdirectory(trompeloeil)" if you prefer to track
	      the trompeloeil git repository and also here add
	      "target_link_libraries(<test_program> trompeloeil)" for your test
	      target
	  - "cmake -DBUILD_TYPE=Debug <trompeloeil-dir>" enables the test
	    targets "self_test" and "thread_terror"
	    . "-DSANITIZE" enables ASAN and UBSAN for "self_test", and TSAN and
	      UBSAN for "thread_terror"

v27 2017-06-27

	* Fixed a regression where NAMED_REQUIRE_DESTRUCTION(obj) accidentally
	  resulted in a std::unique_ptr<trompeloeil::expectation> instead
	  of std::unique_ptr<trompeloeil::lifetime_monitor> as documented.

	* Added a rudimentary CMakeLists.txt file. Thanks Harald Achitz.

v26 2017-06-12

	* Support for threaded semi-integration tests by allowing
	  queries if a sequence object "is_completed()", if an
	  expectation objet "is_satisfied()" or "is_saturated()".

	  See FAQ and reference manual for details.

	* Internal restructuring for reduced code size.

v25 2017-04-17

	* Changed the expectation macros such that you can now have a
	  macro that expands into several REQUIRE_CALL() (and the likes)

	* Fixed macro expansion bugs causing name clashes.

	* Documented clang++ 4 compatibility

	* Sequence objects are now movable and can, for example, be
	  returned from functions.

v24 2017-03-10

	* Worked around VS2017 bug. Thanks mlimber and xiangfan-ms

v23 2017-01-29
